Jack Kohm Homepage.html

--- a/J. Hibbards Home Page_ Interacting Galaxies.html
+++ b/J. Hibbards Home Page_ Interacting Galaxies.html
@@ -10,7 +10,7 @@
 link=pink vlink=cyan>
 --->
 
-John Hibbard<br>
+Jack Kohm<br>
 Scientist<br>
 <!---Manager, North American ALMA Regional Center (part of the <A href="http://www.cv.nrao.edu/naasc/">NAASC</a>)<BR>--->
 <a href="http://www.nrao.edu/">NRAO</a>-<a href="http://www.cv.nrao.edu/">Charlottesville</a>
@@ -55,13 +55,13 @@ My Wiki's</a>
 <p>
 </p><hr>
 <!--===========================================================-->
-<h4>All data on these pages is proprietary to John Hibbard and his 
+<h4>All data on these pages is proprietary to Jack Kohm and his 
 collaborators (unless otherwise noted). Please do not reproduce in 
 published form without prior written consent. Images may be used
 without written consent for short-term public presentations (e.g., 
 classes, talks), but the telescopes used should be indicated.</h4><p>
 
-</p><h5>This homepage was created by John Hibbard, who is solely responsible for
+</p><h5>This homepage was created by Jack Kohm, who is solely responsible for
 its content. The information contained here does not represent the official 
 or unofficial views of NRAO or any other organization or individual.</h5><p>
 </p><h5><em>WARNING!</em>  This homepage often does <em>not</em> follow
