--- a/J. Hibbards Home Page_ Interacting Galaxies.html
+++ b/J. Hibbards Home Page_ Interacting Galaxies.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0034)https://www.cv.nrao.edu/~jhibbard/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head><body bgcolor="FFFFFF" background="./J. Hibbards Home Page_ Interacting Galaxies_files/PosterZ.gif" text="white" link="pink" vlink="cyan"><a name="TOP"></a>
-<title>J. Hibbards Home Page: Interacting Galaxies</title>
+<title>Jack Kohm's Home Page: Interacting Galaxies</title>
 <h1><font color="#FF000">The Fate of Gas in Interacting Galaxies</font></h1>
 
 <!---
