--- a/J. Hibbards Home Page_ Interacting Galaxies.html
+++ b/J. Hibbards Home Page_ Interacting Galaxies.html
@@ -1,86 +1,86 @@
-
-<!-- saved from url=(0034)https://www.cv.nrao.edu/~jhibbard/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-</head><body bgcolor="FFFFFF" background="/images/ngcdf2.jpg" text="white" link="pink" vlink="cyan"><a name="TOP"></a>
-<title>Jack Kohm's Home Page: Interacting Galaxies</title>
-<h1><font color="#FF000">The Fate of Gas in Interacting Galaxies</font></h1>
-
+<HTML>
+<HEAD>
+<A NAME="TOP"></A>
+<TITLE>J. Hibbards Home Page: Interacting Galaxies</TITLE>
+<H1><FONT COLOR="#FF000">The Fate of Gas in Interacting Galaxies</FONT></H1>
+</HEAD>
 <!---
 <BODY bgcolor="FFFFFF" background="GGEcover_highres.jpg" text="white" 
 link=pink vlink=cyan>
 --->
-
-Jack Kohm<br>
-Scientist<br>
+<BODY bgcolor="FFFFFF" background="PosterZ.gif" text="white" 
+link=pink vlink=cyan>
+John Hibbard<BR>
+Scientist<BR>
 <!---Manager, North American ALMA Regional Center (part of the <A href="http://www.cv.nrao.edu/naasc/">NAASC</a>)<BR>--->
-<a href="http://www.nrao.edu/">NRAO</a>-<a href="http://www.cv.nrao.edu/">Charlottesville</a>
-<br>
-Rm. 328<br>
-520 Edgemont Road<br>
-<a href="http://www.city.net/countries/united_states/virginia/charlottesville/">
-Charlottesville VA</a> 22903<br>
-Office Phone: (434) 296-0227<br>
-Office FAX: (434) 296-0278<br>
-Email: <em>jhibbard</em>@ <strong>nrao.edu</strong><p>
-(Formerly of the <a href="http://www.ifa.hawaii.edu/ifa/ifa.html">
-Institute for Astronomy</a>, Honolulu, HI and 
+<A HREF="http://www.nrao.edu">NRAO</a>-<A HREF= "http://www.cv.nrao.edu/">Charlottesville</a>
+<BR>
+Rm. 328<BR>
+520 Edgemont Road<BR>
+<A HREF=
+"http://www.city.net/countries/united_states/virginia/charlottesville/">
+Charlottesville VA</a> 22903<BR>
+Office Phone: (434) 296-0227<BR>
+Office FAX: (434) 296-0278<BR>
+Email: <em>jhibbard</em>&#64; <strong>nrao.edu</strong><P>
+(Formerly of the <A HREF= "http://www.ifa.hawaii.edu/ifa/ifa.html">
+Institute for Astronomy</A>, Honolulu, HI and 
 <a href="http://www.astro.columbia.edu/homepage.html">Columbia 
 University</a>)
 
-<br clear="ALL">
+<BR CLEAR=ALL>
 
-</p><p> Check here for
+<P> Check here for
 unpublished data, preprints, reprints, or figures concerning HI in weird
 galaxies.  Everything shown here has been fully reduced, but not
-necessarily fully analyzed.  </p><p>
-</p><hr>
-<h2>Index</h2>
-<ul>
-<li><a href="https://www.cv.nrao.edu/~jhibbard/pubs.html">Works-in-Progress and Publications</a> 
-</li><li><a href="http://www.nrao.edu/astrores/HIrogues/">
+necessarily fully analyzed.  <P>
+<HR>
+<H2>Index</H2>
+<UL>
+<LI><A HREF="pubs.html">Works-in-Progress and Publications</A> 
+<LI><A HREF="http://www.nrao.edu/astrores/HIrogues/">
        An HI Rogues Gallery</a>: collection of HI maps
        of weird galaxies, or weird HI in otherwise normal galaxies
-</li><li><a href="http://www.nrao.edu/astrores/HIrogues/vla2000">
-       Proceedings for the Gas &amp; Galaxy Evolution meeting</a>, 
+<LI><A HREF="http://www.nrao.edu/astrores/HIrogues/vla2000">
+       Proceedings for the Gas & Galaxy Evolution meeting</a>, 
        held in Socorro, May 2000 (ASP Conf. Ser. Vol. 240)
-</li><li><a href="https://www.cv.nrao.edu/~jhibbard/IAP15/E1.html">What you see is not what you get!</a> (or:
+<LI><A HREF="IAP15/E1.html">What you see is not what you get!</a> (or:
 "Why I do HI observations of galaxies").
-</li><li>A linked index to the <a href="https://www.cv.nrao.edu/~jhibbard/galaxies.html">individual 
+<LI>A linked index to the <A HREF="galaxies.html">individual 
 galaxies</a> which appear on this site.
-</li><li><a href="https://www.cv.nrao.edu/~jhibbard/Directions/directions.html">Getting here</a>
-</li><li><a href="https://wikio.nrao.edu/bin/view/Main/JohnHibbard">
+<LI><a href="Directions/directions.html">Getting here</a>
+<LI><A HREF="https://wikio.nrao.edu/bin/view/Main/JohnHibbard">
 My Wiki's</a>
-</li><li><a href="https://www.cv.nrao.edu/~jhibbard/misc.html">Miscellaneous</a> 
-</li></ul>
-<p>
-</p><hr>
+<LI><A HREF="misc.html">Miscellaneous</A> 
+</UL>
+<P>
+<HR>
 <!--===========================================================-->
-<h4>All data on these pages is proprietary to Jack Kohm and his 
+<H4>All data on these pages is proprietary to John Hibbard and his 
 collaborators (unless otherwise noted). Please do not reproduce in 
 published form without prior written consent. Images may be used
 without written consent for short-term public presentations (e.g., 
-classes, talks), but the telescopes used should be indicated.</h4><p>
+classes, talks), but the telescopes used should be indicated.</H4><P>
 
-</p><h5>This homepage was created by Jack Kohm, who is solely responsible for
+<H5>This homepage was created by John Hibbard, who is solely responsible for
 its content. The information contained here does not represent the official 
-or unofficial views of NRAO or any other organization or individual.</h5><p>
-</p><h5><em>WARNING!</em>  This homepage often does <em>not</em> follow
-the <a href="http://cdsweb.u-strasbg.fr/iau-spec.html">
-IAU Recommendations on Nomenclature</a>. Be aware 
+or unofficial views of NRAO or any other organization or individual.</H5><P>
+<H5><EM>WARNING!</EM>  This homepage often does <EM>not</EM> follow
+the <A HREF="http://cdsweb.u-strasbg.fr/iau-spec.html">
+IAU Recommendations on Nomenclature</A>. Be aware 
 that "NGC" is often simply referred to by "N", "UGC" by "U", and
-"Arp" by "A". Apologies for any confusion this may cause.</h5>
+"Arp" by "A". Apologies for any confusion this may cause.</H5>
 
+</body>
 
-
-
+<!-- hhmts start -->
 Last modified: Fri Sep  9 12:08:24 EDT 2005
 <!-- hhmts end -->
-<a href="https://www.cv.nrao.edu/~jhibbard/#TOP">Back to top</a>
-<address>
+<A HREF="#TOP">Back to top</A>
+<ADDRESS>
 Maintained by 
 <em>jhibbard</em>
-@ <strong>nrao.edu</strong><p>
-</p></address>
+&#64; <strong>nrao.edu</strong><P>
+</ADDRESS>
+</html>
 
-
-</body><!-- hhmts start --></html>
