--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <BODY bgcolor="FFFFFF" background="GGEcover_highres.jpg" text="white" 
 link=pink vlink=cyan>
 --->
-<BODY bgcolor="FFFFFF" background="PosterZ.gif" text="white" 
+<BODY bgcolor="FFFFFF" background="ngcdf2.png" text="white" 
 link=pink vlink=cyan>
 John Hibbard<BR>
 Scientist<BR>
