--- a/index.html
+++ b/index.html
@@ -1,86 +1,60 @@
 <HTML>
 <HEAD>
 <A NAME="TOP"></A>
-<TITLE>Jack Kohm's Home Page: Interacting Galaxies</TITLE>
-<H1><FONT COLOR="#FF000">Dark Matter Deficient Galaxies</FONT></H1>
+<TITLE>Jack's Astrophysics Page: Galaxy Evolution and Dark Matter</TITLE>
+<H1><FONT COLOR="#FF000">Modeling Galaxy Structure & Dark Matter Deficient Galaxies</FONT></H1>
 </HEAD>
-<!---
-<BODY bgcolor="FFFFFF" background="GGEcover_highres.jpg" text="white" 
-link=pink vlink=cyan>
---->
 <BODY bgcolor="FFFFFF" background="ngcdf2.jpg" text="white" 
 link=pink vlink=cyan>
-Jack Kohm<BR>
-Scientist<BR>
-<!---Manager, North American ALMA Regional Center (part of the <A href="http://www.cv.nrao.edu/naasc/">NAASC</a>)<BR>--->
-<A HREF="http://www.nrao.edu">NRAO</a>-<A HREF= "http://www.cv.nrao.edu/">Charlottesville</a>
+Joe<BR>
+BS in Physics and Astrophysics student<BR>
+<A HREF="https://nau.edu">Northern Arizona University</a>-<A HREF= "https://www.nau.edu/Physics-and-Astronomy/">Flagstaff</a>
 <BR>
-Rm. 328<BR>
-520 Edgemont Road<BR>
-<A HREF=
-"http://www.city.net/countries/united_states/virginia/charlottesville/">
-Charlottesville VA</a> 22903<BR>
-Office Phone: (434) 296-0227<BR>
-Office FAX: (434) 296-0278<BR>
-Email: <em>jhibbard</em>&#64; <strong>nrao.edu</strong><P>
-(Formerly of the <A HREF= "http://www.ifa.hawaii.edu/ifa/ifa.html">
-Institute for Astronomy</A>, Honolulu, HI and 
-<a href="http://www.astro.columbia.edu/homepage.html">Columbia 
-University</a>)
+Expected Graduation: May 2025<BR>
+<BR>
+Email: <em>jek284</em>&#64; <strong>nau.edu</strong><P>
+Phone: (808)-298-8968<BR>
+(Formerly of the <A HREF= "https://www.hpbaldwin.k12.hi.us/">
+Henry Perrine Baldwin High School</A>, Wailuku, HI)
 
 <BR CLEAR=ALL>
-
-<P> Check here for
-unpublished data, preprints, reprints, or figures concerning HI in weird
-galaxies.  Everything shown here has been fully reduced, but not
-necessarily fully analyzed.  <P>
+<P>Check here for details about my research, upcoming publications, and other interesting astronomy-related topics. All data shown here is a part of my ongoing research and studies at NAU.</P>
 <HR>
 <H2>Index</H2>
 <UL>
 <LI><A HREF="pubs.html">Works-in-Progress and Publications</A> 
-<LI><A HREF="http://www.nrao.edu/astrores/HIrogues/">
-       An HI Rogues Gallery</a>: collection of HI maps
-       of weird galaxies, or weird HI in otherwise normal galaxies
-<LI><A HREF="http://www.nrao.edu/astrores/HIrogues/vla2000">
-       Proceedings for the Gas & Galaxy Evolution meeting</a>, 
-       held in Socorro, May 2000 (ASP Conf. Ser. Vol. 240)
-<LI><A HREF="IAP15/E1.html">What you see is not what you get!</a> (or:
-"Why I do HI observations of galaxies").
-<LI>A linked index to the <A HREF="galaxies.html">individual 
-galaxies</a> which appear on this site.
-<LI><a href="Directions/directions.html">Getting here</a>
-<LI><A HREF="https://wikio.nrao.edu/bin/view/Main/JohnHibbard">
-My Wiki's</a>
+<LI><A HREF="http://www.nau.edu/astrores/InteractingGalaxies/">
+       Modeling and Simulating Interacting Galaxies</a>: A collection of simulations and models of interacting galaxies
+<LI><A HREF="https://www.nau.edu/HPC/">
+       My work with NAU's Advanced Research Computing (ARC)</a>
+<LI><A HREF="research_interests.html">My Research Interests</a>
+<LI>A linked index to the <A HREF="projects.html">individual 
+projects</a> which appear on this site.
+<LI><A HREF="https://nau.edu/contact/">Getting here</A>
+<LI><A HREF="https://github.com/joe">
+My GitHub Repositories</a>
 <LI><A HREF="misc.html">Miscellaneous</A> 
 </UL>
 <P>
 <HR>
-<!--===========================================================-->
-<H4>All data on these pages is proprietary to Jack Kohm and his 
+<H4>All data on these pages is proprietary to Joe and his 
 collaborators (unless otherwise noted). Please do not reproduce in 
 published form without prior written consent. Images may be used
 without written consent for short-term public presentations (e.g., 
-classes, talks), but the telescopes used should be indicated.</H4><P>
-
-<H5>This homepage was created by Jack Kohm, who is solely responsible for
+classes, talks), but the tools and simulations used should be indicated.</H4><P>
+<H5>This homepage was created by Joe, who is solely responsible for
 its content. The information contained here does not represent the official 
-or unofficial views of NRAO or any other organization or individual.</H5><P>
-<H5><EM>WARNING!</EM>  This homepage often does <EM>not</EM> follow
-the <A HREF="http://cdsweb.u-strasbg.fr/iau-spec.html">
-IAU Recommendations on Nomenclature</A>. Be aware 
-that "NGC" is often simply referred to by "N", "UGC" by "U", and
-"Arp" by "A". Apologies for any confusion this may cause.</H5>
-
+or unofficial views of Northern Arizona University or any other organization or individual.</H5><P>
+<H5><EM>NOTE!</EM> This homepage often uses common abbreviations for certain astronomical terms and phenomena. For example, "NGC" might be shortened to "N", and "UGC" to "U". If you find any of these confusing, please don't hesitate to get in touch for clarification!</H5>
 </body>
-
 <!-- hhmts start -->
-Last modified: Fri Sep  9 12:08:24 EDT 2005
+Last modified: Wed Jun 21 12:08:24 MDT 2023
+
 <!-- hhmts end -->
 <A HREF="#TOP">Back to top</A>
 <ADDRESS>
 Maintained by 
-<em>jhibbard</em>
-&#64; <strong>nrao.edu</strong><P>
+<em>jek284</em>
+&#64; <strong>nau.edu</strong><P>
 </ADDRESS>
 </html>
-
