--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </HEAD>
 <BODY bgcolor="FFFFFF" background="ngcdf2.jpg" text="white" 
 link=pink vlink=cyan>
-Joe<BR>
+Jack Kohm<BR>
 BS in Physics and Astrophysics student<BR>
 <A HREF="https://nau.edu">Northern Arizona University</a>-<A HREF= "https://www.nau.edu/Physics-and-Astronomy/">Flagstaff</a>
 <BR>
@@ -14,8 +14,6 @@ Expected Graduation: May 2025<BR>
 <BR>
 Email: <em>jek284</em>&#64; <strong>nau.edu</strong><P>
 Phone: (808)-298-8968<BR>
-(Formerly of the <A HREF= "https://www.hpbaldwin.k12.hi.us/">
-Henry Perrine Baldwin High School</A>, Wailuku, HI)
 
 <BR CLEAR=ALL>
 <P>Check here for details about my research, upcoming publications, and other interesting astronomy-related topics. All data shown here is a part of my ongoing research and studies at NAU.</P>
@@ -31,18 +29,18 @@ Henry Perrine Baldwin High School</A>, Wailuku, HI)
 <LI>A linked index to the <A HREF="projects.html">individual 
 projects</a> which appear on this site.
 <LI><A HREF="https://nau.edu/contact/">Getting here</A>
-<LI><A HREF="https://github.com/joe">
+<LI><A HREF="https://github.com/jackkohm">
 My GitHub Repositories</a>
 <LI><A HREF="misc.html">Miscellaneous</A> 
 </UL>
 <P>
 <HR>
-<H4>All data on these pages is proprietary to Joe and his 
+<H4>All data on these pages is proprietary to Jack Kohm and his 
 collaborators (unless otherwise noted). Please do not reproduce in 
 published form without prior written consent. Images may be used
 without written consent for short-term public presentations (e.g., 
 classes, talks), but the tools and simulations used should be indicated.</H4><P>
-<H5>This homepage was created by Joe, who is solely responsible for
+<H5>This homepage was created by Jack Kohm, who is solely responsible for
 its content. The information contained here does not represent the official 
 or unofficial views of Northern Arizona University or any other organization or individual.</H5><P>
 <H5><EM>NOTE!</EM> This homepage often uses common abbreviations for certain astronomical terms and phenomena. For example, "NGC" might be shortened to "N", and "UGC" to "U". If you find any of these confusing, please don't hesitate to get in touch for clarification!</H5>
